mdmCeneveo/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACT_ACCOUNTID__c</fullName>
        <externalId>true</externalId>
        <label>ACT_ACCOUNTID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACT_Customer__c</fullName>
        <inlineHelpText>Customer # Previously entered in ACT!</inlineHelpText>
        <label>ACT! Customer #</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACT_ID_Status__c</fullName>
        <label>ACT! ID/Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACT_RecordMgr__c</fullName>
        <label>ACT! RecordMgr</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACT_Referred_By__c</fullName>
        <label>ACT! Referred By</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACT_X_Activity__c</fullName>
        <label>ACT! X Activity</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACT_X_History__c</fullName>
        <label>ACT! X History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACT_X_Notes__c</fullName>
        <label>ACT! X Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_AGC_Name__c</fullName>
        <label>Account AGC Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_AGC__c</fullName>
        <label>Account AGC Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Create_Request_Date__c</fullName>
        <label>Account Create Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <displayFormat>A-{00000000}</displayFormat>
        <inlineHelpText>Auto Generated Account Number by Salesforce</inlineHelpText>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Owner.Id, Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Acct_Segmentation__c</fullName>
        <label>Acct Segmentation</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this account is being actively pursued.</inlineHelpText>
        <label>Active Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Monitor_Carlos__c</fullName>
        <description>cx</description>
        <formula>IF ( ISPICKVAL(Acct_Segmentation__c,&quot;B&quot;),

IF(ISNULL(LastActivityDate), IMAGE(&quot;/img/samples/color_red.gif &quot;, &quot;NO ACTIVITIES&quot;,15,15),

IF( Days_Since_Last_Activity__c &lt;30, IMAGE(&quot;/img/samples/color_green.gif&quot;,&quot;Less than 30&quot;,15,15) ,

IF( Days_Since_Last_Activity__c &lt; 45, IMAGE(&quot;/img/samples/color_yellow.gif&quot;,&quot;30 to 45&quot;,15,15),

IF( Days_Since_Last_Activity__c &gt;45,IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;More than 45 Days&quot;,15,15),
IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;More than 45 Days&quot;,15,15)
)))),


IF( ISPICKVAL(Acct_Segmentation__c ,&quot;C&quot;),

IF(ISNULL(LastActivityDate), IMAGE(&quot;/img/samples/color_red.gif &quot;, &quot;NO ACTIVITIES&quot;,15,15),

IF( Days_Since_Last_Activity__c &lt;45, IMAGE(&quot;/img/samples/color_green.gif&quot;,&quot;Less than 45&quot;,15,15) ,

IF( Days_Since_Last_Activity__c &lt; 60, IMAGE(&quot;/img/samples/color_yellow.gif&quot;,&quot;45 to 60&quot;,15,15),

IF( Days_Since_Last_Activity__c &gt;60,IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;More than 60 Days&quot;,15,15),
IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;More than 60 Days&quot;,15,15)
)))),


IF( ISPICKVAL(Acct_Segmentation__c,&quot;D&quot;),

IF(ISNULL(LastActivityDate), IMAGE(&quot;/img/samples/color_red.gif &quot;, &quot;NO ACTIVITIES&quot;,15,15),

IF( Days_Since_Last_Activity__c &lt;75, IMAGE(&quot;/img/samples/color_green.gif&quot;,&quot;Less than 75&quot;,15,15) ,

IF( Days_Since_Last_Activity__c &lt; 90, IMAGE(&quot;/img/samples/color_yellow.gif&quot;,&quot;75 to 90&quot;,15,15),

IF( Days_Since_Last_Activity__c &gt;90,IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;More than 90 Days&quot;,15,15),
IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;More than 90 Days&quot;,15,15)
)))),


IF(ISNULL(LastActivityDate), IMAGE(&quot;/img/samples/color_red.gif &quot;, &quot;NO ACTIVITIES&quot;,15,15),

IF( Days_Since_Last_Activity__c &lt;15, IMAGE(&quot;/img/samples/color_green.gif&quot;,&quot;Less than 30&quot;,15,15) ,

IF( Days_Since_Last_Activity__c &lt; 30, IMAGE(&quot;/img/samples/color_yellow.gif&quot;,&quot;30 to 45&quot;,15,15),

IF( Days_Since_Last_Activity__c &gt;29,IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;45 to 60&quot;,15,15), IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;More than 60 Days&quot;,15,15)
))))
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Monitor Carlos</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Monitor__c</fullName>
        <formula>IF
(ISNULL(LastActivityDate),
IMAGE(&quot;/img/samples/color_red.gif &quot;, &quot;NO ACTIVITIES&quot;,15,15),
IF( Days_Since_Last_Activity__c &lt;15,
IMAGE(&quot;/img/samples/color_green.gif&quot;,&quot;Less than 30&quot;,15,15) ,
IF( Days_Since_Last_Activity__c &lt; 30,
IMAGE(&quot;/img/samples/color_yellow.gif&quot;,&quot;30 to 45&quot;,15,15),
IF( Days_Since_Last_Activity__c &gt;29,
IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;45 to 60&quot;,15,15) ,
IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;More than 60 Days&quot;,15,15)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green: Activity &lt; 15 Days

Yellow: Activity &gt; 15 Days

Red: Activity &gt;45 Days</inlineHelpText>
        <label>Activity Monitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Valid_From_Date__c</fullName>
        <label>Address Valid From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address_Valid_To_Date__c</fullName>
        <label>Address Valid To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>At_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attention__c</fullName>
        <label>Attention</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOY_Forecast__c</fullName>
        <label>BOY Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Number__c</fullName>
        <inlineHelpText>Number pulled from older systems prior to Salesforce implementation.</inlineHelpText>
        <label>Billing Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Formula__c</fullName>
        <formula>if(LEN(BillingStreet)&gt;0, BillingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(BillingCity)&gt;0, BillingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(BillingState)&gt;0, BillingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(BillingPostalCode)&gt;0, BillingPostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN( BillingCountry) &gt;0, BillingCountry,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_2014__c</fullName>
        <description>Rollup SUM budget_amount__c WHERE YEAR(Period_End_Date) = 2014</description>
        <inlineHelpText>Rollup SUM budget_amount__c WHERE YEAR(Period_End_Date) = 2014</inlineHelpText>
        <label>Budget (2014)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_2015__c</fullName>
        <label>Budget (2015)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Started_Month__c</fullName>
        <label>Business Started Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Started_Year__c</fullName>
        <label>Business Started Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCR_CLAM_2__Set_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CCR CLAM 2 app multiple merge - use this field to flag a single record as the master record, i.e. the record to be kept and all duplicate data to be merged onto within a duplicate set</description>
        <label>Set Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCR_CLAM_2__Set_Number__c</fullName>
        <description>CCR CLAM 2 app multiple merge - use this field to group duplicates together, i.e. give each set of duplicates its own unique set number and populate this field with that number for each of the duplicates in the set</description>
        <label>Set Number</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCR_CLAM_2__Set_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CCR CLAM app multiple merge - this field is used by the CCR CLAM app to flag a duplicate set as having finished merge processing</description>
        <label>Set Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CP_Top_93_HE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CP Top 93 HE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Only Customer Service Department Users may be selected</inlineHelpText>
        <label>CSR</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Department</field>
                <operation>equals</operation>
                <value>Customer Service</value>
            </filterItems>
            <infoMessage>Only Customer Service Department Users may be selected</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CVO_Account_Name__c</fullName>
        <label>CVO - Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVO_City_Address__c</fullName>
        <description>Cenveo User City Address</description>
        <inlineHelpText>Cenveo User City Address</inlineHelpText>
        <label>CVO - City Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVO_Country_Address__c</fullName>
        <description>Cenveo Users Country Address</description>
        <inlineHelpText>Cenveo Users Country Address</inlineHelpText>
        <label>CVO - Country Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVO_Fax__c</fullName>
        <description>Cenveo User Fax Number</description>
        <inlineHelpText>Cenveo User Fax Number</inlineHelpText>
        <label>CVO - Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CVO_HE_Sales_Bowl__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CVO HE Sales Bowl</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CVO_Industry__c</fullName>
        <description>Cenveo User Industry Field</description>
        <inlineHelpText>Cenveo User Industry Field</inlineHelpText>
        <label>CVO - Industry</label>
        <picklist>
            <picklistValues>
                <fullName>*Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Business Process Outsourcing (BPO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Comics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Consumer/Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Contract Manufactures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Contract Packagers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Enterprise Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Government Printing Office (GPO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Health &amp; Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Managed Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Multi-level Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Pharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Private Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Travel/Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency/Creative Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial/Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT/Telecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CVO_Phone__c</fullName>
        <label>CVO - Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CVO_State_Address__c</fullName>
        <description>Cenveo Users State Address</description>
        <inlineHelpText>Cenveo Users State Address</inlineHelpText>
        <label>CVO - State Address</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVO_Street_Address__c</fullName>
        <description>Cenveo User Street Address</description>
        <inlineHelpText>Cenveo User Street Address</inlineHelpText>
        <label>CVO - Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVO_Zip_Code_Address__c</fullName>
        <description>Cenveo User Zip Code Address</description>
        <inlineHelpText>Cenveo User Zip Code Address</inlineHelpText>
        <label>CVO - Zip Code Address</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CY_Budget_100K__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Budgets greater than 100,000</description>
        <label>CY Budget &gt; 100K ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Print_Potential__c</fullName>
        <label>Commercial Print Potential $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commercial_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Potential__c</fullName>
        <label>Content Potential $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreateAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreateAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_from_D_B_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created from D&amp;B Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Application_Status__c</fullName>
        <label>Credit Application Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Application__c</fullName>
        <label>Credit Application</label>
        <picklist>
            <picklistValues>
                <fullName>Not Issued</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Changes Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Group__c</fullName>
        <label>Credit Group</label>
        <picklist>
            <picklistValues>
                <fullName>Rex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charlotte/International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nashua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gilbreth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Rep_UserLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Only Credit Department Users may be selected</inlineHelpText>
        <label>Credit Rep:</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Credit Rep must be a User assigned to the Credit Department</errorMessage>
            <filterItems>
                <field>User.Department</field>
                <operation>equals</operation>
                <value>Credit</value>
            </filterItems>
            <infoMessage>Only Credit Department Users may be selected</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Terms__c</fullName>
        <label>Credit Terms</label>
        <picklist>
            <picklistValues>
                <fullName>1% 10 NET 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1% 15 NET 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2% 10 NET 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2% 15 NET 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CREDIT CARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAY UPON RECEIPT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_YTD_Budget__c</fullName>
        <label>Current YTD Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_YTD_Sales__c</fullName>
        <label>YTD Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_Budget__c</fullName>
        <label>CY Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_Outlook__c</fullName>
        <formula>BOY_Forecast__c +  Current_YTD_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year Outlook</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <label>Date Created</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>-(LastActivityDate-TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diversity_Business_Ownership__c</fullName>
        <label>Diversity Business Ownership</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diversity_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diversity Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domestic_Ultimate_Business_Name__c</fullName>
        <formula>DandbCompany.DomesticUltimateBusinessName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domestic Ultimate Business Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dunning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dunning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDI_Capable__c</fullName>
        <label>EDI Capable?</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ENV_Interco_Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for the Envelope Group Only to track Intercompany accounts, Broker Accounts and accounts marked as &quot;Other&quot;.</description>
        <inlineHelpText>This field is used for the Envelope Group Only to track Intercompany accounts, Broker Accounts and accounts marked as &quot;Other&quot;.</inlineHelpText>
        <label>ENV - Interco/Other Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Type__c</fullName>
        <label>Email Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Envelope_Identifier__c</fullName>
        <label>Envelope Identifier</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>State of Oregon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Heath - SWE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Envelope_Potential__c</fullName>
        <label>Envelope Potential $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Envelopes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Envelopes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ethnicity_Type__c</fullName>
        <label>Ethnicity Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fax Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feed_Title_1__c</fullName>
        <label>Feed Title 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_Title_2__c</fullName>
        <label>Feed Title 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_Title_3__c</fullName>
        <label>Feed Title 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feed_URL_2__c</fullName>
        <label>Feed URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Feed_URL_3__c</fullName>
        <label>Feed URL 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Feed_URL_4__c</fullName>
        <label>Feed URL 4</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Feed_URL__c</fullName>
        <label>Feed URL 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Focus_Reason__c</fullName>
        <inlineHelpText>Enter the focus for this account for the current year. Include Company information, Why it was selected, Platform and or products to grow, Dollar amount to grow</inlineHelpText>
        <label>Focus Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Folding_Carton_Potential__c</fullName>
        <label>Folding Carton Potential $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Folding_Cartons__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Folding Cartons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecast_Comments__c</fullName>
        <label>Forecast Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fortune_500__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracking our account&apos;s that fall under the Fortune 500 classification. Fortune 500 = the top 500 U.S. closely held and public corporations</description>
        <inlineHelpText>Tracking our account&apos;s that fall under the Fortune 500 classification. Fortune 500 = the top 500 U.S. closely held and public corporations</inlineHelpText>
        <label>Fortune 500</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <inlineHelpText>Freight Carrier for Shipping</inlineHelpText>
        <label>Freight Carrier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Parent_Organization_ID__c</fullName>
        <label>Future Parent Organization</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Parent_Relationship_Date__c</fullName>
        <label>Future Parent Relationship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Global_Parent_Account__c</fullName>
        <formula>DandbCompany.GlobalUltimateBusinessName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Ultimate Business Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Membership__c</fullName>
        <inlineHelpText>Groups from ACT!</inlineHelpText>
        <label>Group Membership</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intercompany_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Rep</label>
        <referenceTo>Intercompany_Rep__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>International_Calling_Code__c</fullName>
        <label>International Calling Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Eligible_For_Budget_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Budgets greater than 250,000</description>
        <label>CY Budget &gt; 250K ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Eligible_For_Outlook_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is created to track the accounts having &gt; 250000 current year outlook or child of this type of account. These accounts are eligible for reporting.</description>
        <label>Is Eligible For CY Outlook Report</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>